[workspace]
resolver = "2"
members = ["core"]

# ---------------------------------------------------------------------------
# Shared package fields (DRY): bump version / MSRV / license here once;
# members inherit via `field.workspace = true`.
# ---------------------------------------------------------------------------
[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.81"
license      = "Apache-2.0"
authors      = ["Albert Hui <albert@securityronin.com>"]
repository   = "https://github.com/SecurityRonin/snss-forensic"

# ---------------------------------------------------------------------------
# Single source of truth for dependency versions shared by 2+ members.
# ---------------------------------------------------------------------------
[workspace.dependencies]
snss = { version = "0.1", path = "core", package = "snss-core" }

# ---------------------------------------------------------------------------
# Paranoid Gatekeeper: these crates parse untrusted, attacker-controllable
# SNSS session files. Never panic, never read out of bounds, never trust a
# length. Tests opt out via `#![cfg_attr(test, allow(clippy::unwrap_used,
# clippy::expect_used))]`.
# ---------------------------------------------------------------------------
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all                      = { level = "warn",  priority = -1 }
pedantic                 = { level = "warn",  priority = -1 }
correctness              = { level = "deny",  priority = -1 }
suspicious               = { level = "deny",  priority = -1 }
unwrap_used              = { level = "deny",  priority = 0  }
expect_used              = { level = "deny",  priority = 0  }
module_name_repetitions  = { level = "allow", priority = 1  }
must_use_candidate       = { level = "allow", priority = 1  }
missing_errors_doc       = { level = "allow", priority = 1  }
missing_panics_doc       = { level = "allow", priority = 1  }
cast_possible_truncation = { level = "allow", priority = 1  }
cast_possible_wrap       = { level = "allow", priority = 1  }
cast_sign_loss           = { level = "allow", priority = 1  }
cast_precision_loss      = { level = "allow", priority = 1  }
too_many_lines           = { level = "allow", priority = 1  }
items_after_statements   = { level = "allow", priority = 1  }
similar_names            = { level = "allow", priority = 1  }
manual_let_else          = { level = "allow", priority = 1  }
# Subjective style lints (matches the set snss-core was authored under in
# browser-forensic) — not safety-relevant, left to author discretion. The
# Paranoid-Gatekeeper safety denies above (unsafe/unwrap/expect/correctness/
# suspicious) are unchanged.
unreadable_literal       = { level = "allow", priority = 1  }
needless_pass_by_value   = { level = "allow", priority = 1  }
format_push_string       = { level = "allow", priority = 1  }
unnecessary_wraps        = { level = "allow", priority = 1  }

[profile.release]
lto           = "thin"
codegen-units = 1
